{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 33,
  "lineage": "deb7cc55-0ac1-2769-30d2-53d032d3b5eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079022034dc669e9d",
            "arn": "arn:aws:ec2:us-east-1:204303798537:elastic-ip/eipalloc-079022034dc669e9d",
            "association_id": "eipassoc-07435fac1f0581896",
            "domain": "vpc",
            "id": "eipalloc-079022034dc669e9d",
            "instance": "i-0c8d8ca68a5cfcee8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b3c2d24d6beff0f1",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-34-192-202-78.compute-1.amazonaws.com",
            "public_ip": "34.192.202.78",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-eip",
              "Project": "resume-reviewer"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-eip",
              "Project": "resume-reviewer"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "eipalloc-079022034dc669e9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.server",
            "aws_internet_gateway.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_key_pair.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d7f022123f8ff19d",
            "arn": "arn:aws:ec2:us-east-1:204303798537:instance/i-0c8d8ca68a5cfcee8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8d8ca68a5cfcee8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "resume-reviewer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b3c2d24d6beff0f1"
              }
            ],
            "primary_network_interface_id": "eni-0b3c2d24d6beff0f1",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-34-192-202-78.compute-1.amazonaws.com",
            "public_ip": "34.192.202.78",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0312f201f7d0ecff4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0939ebb482d4551f2",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-server",
              "Project": "resume-reviewer"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-server",
              "Project": "resume-reviewer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a25677ed0f20ea00"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "i-0c8d8ca68a5cfcee8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_key_pair.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:internet-gateway/igw-015926864545fdec1",
            "id": "igw-015926864545fdec1",
            "owner_id": "204303798537",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-igw",
              "Project": "resume-reviewer"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-igw",
              "Project": "resume-reviewer"
            },
            "vpc_id": "vpc-02e049fa149da2f4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "igw-015926864545fdec1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:route-table/rtb-0ffe36dde4b385577",
            "id": "rtb-0ffe36dde4b385577",
            "owner_id": "204303798537",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015926864545fdec1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-public-rt",
              "Project": "resume-reviewer"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-public-rt",
              "Project": "resume-reviewer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e049fa149da2f4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "rtb-0ffe36dde4b385577",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f37aa4f5b03d557",
            "region": "us-east-1",
            "route_table_id": "rtb-0ffe36dde4b385577",
            "subnet_id": "subnet-0939ebb482d4551f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "rtbassoc-05f37aa4f5b03d557",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:security-group/sg-0a25677ed0f20ea00",
            "description": "Security group for Resume Reviewer EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a25677ed0f20ea00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (restrict to your IP in production)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "resume-reviewer-ec2-sg",
            "name_prefix": "",
            "owner_id": "204303798537",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-ec2-sg",
              "Project": "resume-reviewer"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-ec2-sg",
              "Project": "resume-reviewer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e049fa149da2f4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "sg-0a25677ed0f20ea00",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:security-group/sg-068eb934a500fa1ba",
            "description": "Security group for Resume Reviewer RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068eb934a500fa1ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2 only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a25677ed0f20ea00"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "resume-reviewer-rds-sg",
            "name_prefix": "",
            "owner_id": "204303798537",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-rds-sg",
              "Project": "resume-reviewer"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-rds-sg",
              "Project": "resume-reviewer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e049fa149da2f4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "sg-068eb934a500fa1ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:subnet/subnet-0f198e39990f14279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f198e39990f14279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204303798537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-private-subnet-1",
              "Project": "resume-reviewer",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-private-subnet-1",
              "Project": "resume-reviewer",
              "Type": "private"
            },
            "vpc_id": "vpc-02e049fa149da2f4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "subnet-0f198e39990f14279",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:subnet/subnet-0d21b1f8d3ea9849a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d21b1f8d3ea9849a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204303798537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-private-subnet-2",
              "Project": "resume-reviewer",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-private-subnet-2",
              "Project": "resume-reviewer",
              "Type": "private"
            },
            "vpc_id": "vpc-02e049fa149da2f4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "subnet-0d21b1f8d3ea9849a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:subnet/subnet-0939ebb482d4551f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0939ebb482d4551f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "204303798537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-public-subnet",
              "Project": "resume-reviewer",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-public-subnet",
              "Project": "resume-reviewer",
              "Type": "public"
            },
            "vpc_id": "vpc-02e049fa149da2f4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "subnet-0939ebb482d4551f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204303798537:vpc/vpc-02e049fa149da2f4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d02bb2328e084223",
            "default_route_table_id": "rtb-0d2e520917ea5f802",
            "default_security_group_id": "sg-0d5aaf7da5391132e",
            "dhcp_options_id": "dopt-0b47d4399d436a575",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02e049fa149da2f4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2e520917ea5f802",
            "owner_id": "204303798537",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-vpc",
              "Project": "resume-reviewer"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "resume-reviewer-vpc",
              "Project": "resume-reviewer"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "204303798537",
            "id": "vpc-02e049fa149da2f4b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}